🕴🙎 Updated with Glitch

--- a/views/project.html
+++ b/views/project.html
@@ -68,9 +68,14 @@
         In this section of the website, you'll be able to find some of the projects and units I've done this year in ICS3U. The units you will find are vidcode, and 3d-printing. You'll also find my robotics final project on this page!
       </p>
       <p class="one">
-        If you're not in the mood to look at any of these wonderful pages, feel free to play some javascript brick breakers!
+        If you're not in the mood to look at any of these wonderful pages, feel free to play some javascript brick breakers, check up on the weather in Collingwood, or check up on the !
       </p>
-      <iframe allowfullscreen frameborder="0" width="900" height="500" src="https://www.vidcode.com/share/renderer/mVYou2QhQK"></iframe>
+      <iframe allowfullscreen frameborder="0" width="967" height="500" src="https://www.vidcode.com/share/renderer/mVYou2QhQK"></iframe>
+      <a class="weatherwidget-io" href="https://forecast7.com/en/44d50n80d22/collingwood/" data-label_1="COLLINGWOOD" data-label_2="WEATHER" data-theme="blue-mountains" >COLLINGWOOD WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
+      <iframe src="https://calendar.google.com/calendar/embed?src=19787%40smcdsb.on.ca&ctz=America%2FNew_York" style="border: 0" width="967" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
   </body>
 </html>
