💎🚙 Updated with Glitch

--- a/views/final-project.html
+++ b/views/final-project.html
@@ -93,5 +93,23 @@
         From my final project in helping with the robotics team, I've learned quite a bit. This year, I learned how to function the new Vex coding studio. It proves to be a bit of a challenge, however I've grown to adapt to it. I've also learned new engineering and coding skills that I can utilize for our schoolboards Skill's Ontario team, which may help in our competition this year, and get us at a higher ranking. I'm also sure that after a few competitions using our robot, I will understand what needs to be improved and what can also be added.
       </p>
     </div>
+     <div style="background-color:grey;color:white;padding:20px;">
+       <a class="weatherwidget-io" href="https://forecast7.com/en/44d50n80d22/collingwood/" data-label_1="COLLINGWOOD" data-label_2="WEATHER" data-theme="blue-mountains" >COLLINGWOOD WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
+       <p>
+         <strong>Website Created and Owned By: Jameson Narain</strong>
+                <p id="insta">
+<a href="https://www.instagram.com/jnarain12/?hl=en">
+<img border="0" alt="Insta" src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2FeerDTf-logo-instagram-clipart-transparent.png?v=1576526171872" width="70" height="70">
+</a>
+<a href="https://steamcommunity.com/profiles/76561198133313504">
+<img border="0" alt="Steam" 
+src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2Fsteam-icon-19.png?v=1576550918397" width="70" height="70">
+</a>
+     </p>
+       </p>
+    </div>
   </body>
 </html>
