--- a/views/mybiography.html
+++ b/views/mybiography.html
@@ -58,7 +58,7 @@
   </body>
      <body
     id="background1"
-    background="https://cdn.glitch.com/6288a5e9-2c25-431e-8092-1c41fbfc26e0%2Falireza-khajehali-2.jpg?v=1575992334481"
+    background="http://getwallpapers.com/wallpaper/full/1/b/8/1093128-popular-nature-background-hd-1920x1080.jpg"
   ></body>
    <body>
     
@@ -109,6 +109,22 @@
       <img align= "middle" src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2FColBoxingGym_Super_Portrait.jpg?v=1576851710963" 
               alt="shipyards" class="shipyards" width="900" height="600">
      </div>
-    </body>
-  </body>
+          <div style="background-color:grey;color:white;padding:20px;">
+       <a class="weatherwidget-io" href="https://forecast7.com/en/44d50n80d22/collingwood/" data-label_1="COLLINGWOOD" data-label_2="WEATHER" data-theme="blue-mountains" >COLLINGWOOD WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
+       <p>
+         <strong>Website Created and Owned By: Jameson Narain</strong>
+                <p id="insta">
+<a href="https://www.instagram.com/jnarain12/?hl=en">
+<img border="0" alt="Insta" src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2FeerDTf-logo-instagram-clipart-transparent.png?v=1576526171872" width="70" height="70">
+</a>
+<a href="https://steamcommunity.com/profiles/76561198133313504">
+<img border="0" alt="Steam" 
+src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2Fsteam-icon-19.png?v=1576550918397" width="70" height="70">
+</a>
+     </p>
+       </p>
+    </div>
 </html>
