--- a/views/home.html
+++ b/views/home.html
@@ -80,16 +80,25 @@
               alt="Jameson Narain" class="jameson">
 <p id="introduction">
   Welcome to Jameson Narain's website! Here you will be able to find multiple different sources, such as the school website, projects Jameson has worked on in Computer Science, and a biography of Jameson's life. The overall goal is to upload this website onto the internet and make it fully functional for all to see! If intrested in looking more into myself, feel free to check out my social links below!
-        <p id="insta">
+</p>
+      </div>
+   <div style="background-color:grey;color:white;padding:20px;">
+       <a class="weatherwidget-io" href="https://forecast7.com/en/44d50n80d22/collingwood/" data-label_1="COLLINGWOOD" data-label_2="WEATHER" data-theme="blue-mountains" >COLLINGWOOD WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
+       <p>
+         <strong>Website Created and Owned By: Jameson Narain</strong>
+                <p id="insta">
 <a href="https://www.instagram.com/jnarain12/?hl=en">
-<img border="0" alt="Insta" src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2FeerDTf-logo-instagram-clipart-transparent.png?v=1576526171872" width="100" height="100">
+<img border="0" alt="Insta" src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2FeerDTf-logo-instagram-clipart-transparent.png?v=1576526171872" width="70" height="70">
 </a>
 <a href="https://steamcommunity.com/profiles/76561198133313504">
 <img border="0" alt="Steam" 
-src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2Fsteam-icon-19.png?v=1576550918397" width="100" height="100">
+src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2Fsteam-icon-19.png?v=1576550918397" width="70" height="70">
 </a>
-</p>
-        </p>
-      </div>
+     </p>
+       </p>
+    </div>
   </body>
 </html>
