--- a/views/project.html
+++ b/views/project.html
@@ -51,6 +51,7 @@
           <li class="nav-item">
             <a class="nav-link" href="3d-print.html">3D Print</a>
           </li>
+          
         </ul>
       </div>
     </nav>
@@ -68,14 +69,28 @@
         In this section of the website, you'll be able to find some of the projects and units I've done this year in ICS3U. The units you will find are vidcode, and 3d-printing. You'll also find my robotics final project on this page!
       </p>
       <p class="one">
-        If you're not in the mood to look at any of these wonderful pages, feel free to play some javascript brick breakers, check up on the weather in Collingwood, or check up on the !
+        If you're not in the mood to look at any of these wonderful pages, feel free to place some bets on a space race, or check the school calander!
       </p>
-      <iframe allowfullscreen frameborder="0" width="967" height="500" src="https://www.vidcode.com/share/renderer/mVYou2QhQK"></iframe>
-      <a class="weatherwidget-io" href="https://forecast7.com/en/44d50n80d22/collingwood/" data-label_1="COLLINGWOOD" data-label_2="WEATHER" data-theme="blue-mountains" >COLLINGWOOD WEATHER</a>
+  <iframe allowfullscreen frameborder="0" width="967" height="300" src="https://www.vidcode.com/share/renderer/0RkQEcnQD0"></iframe>
+      <iframe src="https://calendar.google.com/calendar/embed?src=19787%40smcdsb.on.ca&ctz=America%2FNew_York" style="border: 0" width="967" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
+     <div style="background-color:grey;color:white;padding:20px;">
+       <a class="weatherwidget-io" href="https://forecast7.com/en/44d50n80d22/collingwood/" data-label_1="COLLINGWOOD" data-label_2="WEATHER" data-theme="blue-mountains" >COLLINGWOOD WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
-      <iframe src="https://calendar.google.com/calendar/embed?src=19787%40smcdsb.on.ca&ctz=America%2FNew_York" style="border: 0" width="967" height="600" frameborder="0" scrolling="no"></iframe>
+       <p>
+         <strong>Website Created and Owned By: Jameson Narain</strong>
+                <p id="insta">
+<a href="https://www.instagram.com/jnarain12/?hl=en">
+<img border="0" alt="Insta" src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2FeerDTf-logo-instagram-clipart-transparent.png?v=1576526171872" width="70" height="70">
+</a>
+<a href="https://steamcommunity.com/profiles/76561198133313504">
+<img border="0" alt="Steam" 
+src="https://cdn.glitch.com/5158395e-c8e2-41fe-914a-1ba1d4c369b1%2Fsteam-icon-19.png?v=1576550918397" width="70" height="70">
+</a>
+     </p>
+       </p>
     </div>
   </body>
 </html>
