--- a/views/3d-print.html
+++ b/views/3d-print.html
@@ -34,7 +34,7 @@
               >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="views/project.html"
+            <a class="nav-link" href="project.html"
               >Projects</a>
           </li>
           <li class="nav-item">
